redirecting to mobile site added

--- a/src/lib/import/styles.css
+++ b/src/lib/import/styles.css
@@ -23,6 +23,8 @@
 .fscreen {
 	min-height: 100dvh;
 	min-height: 100vh;
+	max-height: 100dvh;
+	max-height: 100vh;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -33,7 +35,8 @@
 }
 
 section {
-	/* scroll-snap-align: start; */
+	scroll-snap-align:start;
+	scroll-snap-type: y mandatory;
 }
 #exw:hover::after {
 	content: '';
@@ -63,3 +66,28 @@ section {
 	font-family: Raleway;
 	text-transform: capitalize;
 }
+
+
+
+.typeeffect h1 {
+	overflow: hidden; /* Ensures the content is not revealed until the animation */
+	border-right: .15em solid white; /* The typwriter cursor */
+	white-space: nowrap; /* Keeps the content on a single line */
+	margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+	letter-spacing: .15em; /* Adjust as needed */
+	animation: 
+	  typing 3.5s steps(40, end),
+	  blink-caret .75s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+	from { width: 0 }
+	to { width: 100% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+	from, to { border-color: transparent }
+	50% { border-color: orange; }
+  }
