--- a/src/lib/import/styles.css
+++ b/src/lib/import/styles.css
@@ -4,26 +4,27 @@
 
 :root {
 	user-select: none;
+	scroll-behavior: smooth;
 	scroll-snap-type: y mandatory;
 }
 
 :root {
 	-ms-overflow-style: none; /* Internet Explorer 10+ */
 	scrollbar-width: none; /* Firefox */
-	overflow: -moz-scrollbars-none;
-}
+	overflow: -moz-scrollbars-none;}
+	
 :root::-webkit-scrollbar {
 	display: none; /* Safari and Chrome */
 }
 
 .screen {
-	min-height: 100dvh;
+	min-height: 100svh;
 	min-height: 100vh;
 }
 .fscreen {
-	min-height: 100dvh;
+	min-height: 100svh;
 	min-height: 100vh;
-	max-height: 100dvh;
+	max-height: 100svh;
 	max-height: 100vh;
 	margin-left: auto;
 	margin-right: auto;
@@ -35,7 +36,7 @@
 }
 
 section {
-	scroll-snap-align:start;
+	scroll-snap-align:center;
 	scroll-snap-type: y mandatory;
 }
 #exw:hover::after {
