update 10 files, delete 5 files and create 1 file

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -11,6 +11,7 @@
 .blue {
 	background-color: #1876b4;
 }
+
 .text-blue {
 	color: #1876b4;
 }
@@ -20,15 +21,30 @@
 
 :root::-ms-scrollbar {
 	background: white;
-	width: 0.4em;
+	width: 0s;
 }
 :root::scrollbar {
 	background: white;
-	width: 0.4em;
+	width: 0;
 }
 :root::-webkit-scrollbar {
 	background: white;
-	width: 0.4em;
+	width: 0;
+}
+
+@media(prefers-color-scheme:dark){
+	:root::-ms-scrollbar {
+	background: black;
+	width: 0;
+}
+:root::scrollbar {
+	background: black;
+	width: 0;
+}
+:root::-webkit-scrollbar {
+	background: black;
+	width: 0;
+}
 }
 :root::-webkit-scrollbar-thumb {
 	background: #1876b4;
@@ -40,9 +56,8 @@
 	background: #1876b4;
 }
 
-.screen {
-	min-height: 100svh;
-	min-height: 100vh;
+.xscreen {
+	height: 100vh;
 }
 .fscreen {
 	min-height: 100svh;
