--- a/src/layouts/layoutBase.astro
+++ b/src/layouts/layoutBase.astro
@@ -29,12 +29,12 @@ const { title } = Astro.props;
     <Nav />
     <slot />
     <div
-      class="bg-green-500 blur-[250px] z-10 h-48 w-96 rounded-full fixed top-10 left-24"
+      class="bg-green-500 blur-[250px] z-[5] h-48 w-96 rounded-full fixed top-10 left-24"
     >
     </div>
 
     <div
-      class="bg-green-500 blur-[250px] z-10 h-48 w-96 rounded-full fixed bottom-10 right-24"
+      class="bg-green-500 blur-[250px] z-[5] h-48 w-96 rounded-full fixed bottom-10 right-24"
     >
     </div>
     <style is:global>
