--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,7 +10,9 @@ const data: {
 ---
 
 <Layout title="Blog">
-  <div class="w-full grid-cols-9 grid items-center justify-center flex-grow">
+  <div
+    class="w-full z-10 grid-cols-9 grid items-center justify-center flex-grow"
+  >
     <!-- Blogs List -->
     <div
       class="flex flex-col overflow-y-auto w-full col-span-2 border-r px-4 py-4 h-[90vh] max-w-[1280px] gap-3"
