--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -19,7 +19,9 @@ const items: {
 ---
 
 <Layout title="Blog">
-  <div class="w-full grid-cols-9 grid items-center justify-center flex-grow">
+  <div
+    class="w-full z-10 grid-cols-9 grid items-center justify-center flex-grow"
+  >
     <!-- Blogs List -->
     <div
       class="flex flex-col overflow-y-auto w-full col-span-2 border-r px-4 py-4 h-[90vh] max-w-[1280px] gap-3"
@@ -42,7 +44,7 @@ const items: {
 
     <!-- Blogs View -->
     <div
-      class="flex flex-col w-full flex-grow py-6 gap-3 px-9 col-span-7 h-full"
+      class="flex flex-col overflow-y-auto w-full flex-grow py-6 gap-3 px-9 col-span-7 h-full"
     >
       <h3 class="text-6xl font-bold">{items.title}</h3>
       <div class="w-full border-b border-white/20"></div>
