--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -48,7 +48,8 @@ const items: {
     >
       <h3 class="text-6xl font-bold">{items.title}</h3>
       <div class="w-full border-b border-white/20"></div>
-      <h3 class="text-xl">{items.body}</h3>
+      <h3 class="text-xl grow">{items.body}</h3>
+      <h3 class="text-sm underline underline-offset-4">{items.date}</h3>
     </div>
   </div>
 </Layout>
