--- a/src/pages/latest.astro
+++ b/src/pages/latest.astro
@@ -15,8 +15,12 @@ const items = data[len - 1];
 
 <Layout title="Latest">
   <div class="flex z-10 h-full flex-grow flex-col gap-4 pt-10 pb-4 px-4">
-    <h1 class="text-6xl underline-offset-8 underline">{items.title}</h1>
+    <h3 class="text-6xl font-bold underline-offset-8 underline">
+      {items.title}
+    </h3>
     <h3 class="text-xl flex-grow">{items.body}</h3>
-    <h1 class="text-sm underline underline-offset-4">{items.date}</h1>
+    <h3 class="text-sm font-semibold underline underline-offset-4">
+      {items.date}
+    </h3>
   </div>
 </Layout>
