--- a/src/pages/latest.astro
+++ b/src/pages/latest.astro
@@ -6,7 +6,7 @@ const data: {
   title: string;
   body: string;
   date: string;
-  id: number;
+  id: string;
 }[] = JSON;
 
 const len = data.length;
