--- a/src/layouts/layoutBase.astro
+++ b/src/layouts/layoutBase.astro
@@ -18,8 +18,9 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <title>{title}</title>
     <ViewTransitions />
   </head>
