--- a/src/layouts/layoutBase.astro
+++ b/src/layouts/layoutBase.astro
@@ -5,15 +5,17 @@ interface Props {
 import Nav from "../components/Nav.astro";
 import "@fontsource/dela-gothic-one";
 import "@fontsource-variable/tilt-warp";
-import "@fontsource/raleway";
+// import "@fontsource-variable/raleway";
 import "@fontsource-variable/roboto-flex";
 import "@fontsource-variable/montserrat";
 import { ViewTransitions } from "astro:transitions";
 const { title } = Astro.props;
 ---
 
-<!doctype html>
-<html lang="en">
+<script>
+ 
+</script>
+<html lang="en" transition:animate={"none"}>
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
