--- a/src/pages/latest.astro
+++ b/src/pages/latest.astro
@@ -10,7 +10,7 @@ const data: {
 }[] = JSON;
 
 const len = data.length;
-const items = data[len - 1];
+const items = data[len-1];
 ---
 
 <Layout title="Latest">
