--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,29 +7,47 @@ const data: {
   date: string;
   id: string;
 }[] = JSON;
+const len = data.length;
 ---
+
+<script>
+  let pos = 0;
+  document.addEventListener("astro:before-swap", () => {
+    var position = document.getElementById("blogover")?.scrollTop;
+    pos = position ?? 0;
+  });
+
+  document.addEventListener("astro:after-swap", () => {
+    document.getElementById("blogover")?.scrollTo(0, pos);
+  });
+</script>
 
 <Layout title="Blog">
   <div
     class="w-full z-10 grid-cols-9 grid items-center justify-center flex-grow"
   >
-    <!-- Blogs List -->
     <div
       class="flex flex-col overflow-y-auto w-full col-span-2 border-r px-4 py-4 h-[90vh] max-w-[1280px] gap-3"
+      id="blogover"
     >
       {
-        data.map((item) => (
+        data.toReversed().map((item) => (
           <a
             class="w-auto z-[60] h-auto px-4 py-2 flex flex-col hover:bg-white/20 bg-white/10 border-white/10 border-[2px] rounded-md"
             href={"/blog/" + item.id}
           >
-            <h3 class="text-xl font-bold">{item.title}</h3>
+            <h3
+              class="text-xl font-bold"
+              transition:animate="fade"
+              transition:name={item.id}
+            >
+              {item.title}
+            </h3>
           </a>
         ))
       }
     </div>
 
-    <!-- Blogs View -->
     <div
       class="flex flex-col gap-6 w-full flex-grow justify-center col-span-7 h-full"
     >
