--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -2,8 +2,6 @@
 import { Icon } from "astro-icon/components";
 ---
 
-
-
 <nav
   class="w-full sticky top-0 z-50 border-b-[1px] border-white/30 dark:bg-black bg-white/30 dark:text-white text-black px-4 py-2 inline-flex justify-between items-center"
 >
@@ -15,6 +13,9 @@ import { Icon } from "astro-icon/components";
       </a>
       <a href="/latest" aria-label="latest">
         <h3 class="inline-flex items-center">Latest<Icon name="arrow" /></h3>
+      </a>
+      <a href="/portfolio" aria-label="portfolio">
+        <h3 class="inline-flex items-center">Portfolio<Icon name="arrow" /></h3>
       </a>
     </ul>
   </div>
