--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,24 +5,25 @@ import Layout from "../layouts/layoutBase.astro";
 <Layout title="Kumar Arun">
   <div
     id="hero"
-    class="pl-16 gap-4 flex-grow py-2 flex flex-col justify-center"
+    class="gap-4 flex-grow py-2 px-4 flex h-full sm:items-center flex-col sm:flex-row justify-center"
   >
-    <h1 class="text-9xl">Kumar Arun</h1>
-
+    <div class="w-full flex gap-2 flex-col">
+      <h1 class="text-7xl">Kumar Arun</h1>
+      <h2 class="text-3xl">
+        Self-taught Full Stack Developer, School-taught Mathematician
+      </h2>
+      <a
+        href="/about"
+        class="self-start bg-green-600 px-4 py-2 rounded-md font-bold"
+      >
+        <h3>Who is Arun?</h3></a
+      >
+    </div>
     <img
       transition:name="hero"
-      class="h-96 self-end right-[10%] w-auto fixed top-1/3 bg-blend-overlay"
+      class="sm:h-64 w-full left-1 h-40 bg-blend-overlay"
       src="/hero.svg"
       alt="hero"
     />
-    <h2 class="text-4xl">
-      Self-taught Full Stack Developer, School-taught Mathematician
-    </h2>
-    <a
-      href="/about"
-      class="self-start bg-green-600 px-4 py-2 rounded-md font-bold"
-    >
-      <h3>Who is Arun?</h3></a
-    >
   </div>
 </Layout>
