--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,28 +1,23 @@
 ---
-import Layout from "../layouts/layoutBase.astro";
+import Goto from "../components/button/goto.astro";
+import Layout from "../layouts/RootLayout.astro";
 ---
 
 <Layout title="Kumar Arun">
   <div
-    id="hero"
-    class="gap-4 flex-grow py-2 px-4 flex flex-col sm:flex-row justify-center items-center"
+    class="flex flex-col grow items-start justify-center p-4 gap-6"
+    transition:animate="fade"
   >
-    <div
-      class="w-full sm:w-1/2 flex gap-2 flex-col items-center sm:items-start"
-    >
-      <h1 class="text-4xl sm:text-7xl text-center sm:text-left">Kumar Arun</h1>
-      <h2 class="text-xl sm:text-3xl text-center sm:text-left">
-        Self-taught Full Stack Developer, School-taught Mathematician
-      </h2>
-      <a href="/about" class="bg-green-600 px-4 py-2 rounded-md font-bold">
-        <h3>Who is Arun?</h3>
-      </a>
-    </div>
     <img
-      transition:name="hero"
-      class="sm:h-64 w-full sm:w-1/2 left-1 h-40 bg-blend-overlay"
+      class="h-52 w-auto rounded-full"
       src="/hero.svg"
-      alt="hero"
+      alt="developer image"
     />
+    <h1 class="text-4xl sm:text-7xl font-bold uppercase">Kumar Arun</h1>
+    <h2 class="text-base sm:text-xl">
+      Self-taught Full Stack Developer, School-taught Mathematician
+    </h2>
+
+    <Goto title="Who is Arun ?" href="/about" />
   </div>
 </Layout>
