update 3 files and delete 1 file

--- a/src/components/button/goto.astro
+++ b/src/components/button/goto.astro
@@ -6,6 +6,6 @@ const { title, href } = Astro.props;
 <a
   href={href}
   data-astro-history="replace"
-  class="text-xl pl-2 z-[10] pr-3 py-2 gap-1 inline-flex bg-white/20 hover:bg-white hover:text-black justify-center items-center text-white/60 rounded-md"
+  class="text-xl pl-2 pr-3 py-2 gap-1 inline-flex bg-white/20 hover:bg-white hover:text-black justify-center items-center text-white/60 rounded-md"
   ><Icon name="arrow" /><h3>{title}</h3></a
 >
