--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,7 @@ import Layout from "../layouts/RootLayout.astro";
 ---
 
 <Layout title="Kumar Arun">
-  <div
-    class="flex flex-col grow items-start justify-center p-4 gap-6"
-    transition:animate="fade"
-  >
+  <div class="flex flex-col grow items-start justify-center p-4 gap-6">
     <img
       class="h-52 w-auto rounded-full"
       src="/hero.svg"
