--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -11,16 +11,25 @@ const { title } = Astro.props;
 
 <script></script>
 
-<html lang="en" transition:animate="none">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: light)"
+      content="black"
+    />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: dark)"
+      content="black"
+    />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <title>{title}</title>
-    <ViewTransitions />
   </head>
 
   <body
@@ -28,17 +37,17 @@ const { title } = Astro.props;
   >
     <NavigationBar />
     <div
-      class="max-h-[1080px] pt-[3rem] grow flex flex-row items-center w-full justify-center max-w-[900px] mx-auto"
+      class="max-h-[1080px] z-30 pt-[3rem] grow flex flex-row items-center w-full justify-center max-w-[900px] mx-auto"
     >
       <slot />
     </div>
     <div
-      class="bg-green-500 blur-[250px] z-[5] h-48 w-96 rounded-full fixed top-10 left-24"
+      class="bg-green-500 blur-[250px] h-48 w-96 rounded-full fixed top-10 left-24"
     >
     </div>
 
     <div
-      class="bg-green-500 blur-[250px] z-[5] h-48 w-96 rounded-full fixed bottom-10 right-24"
+      class="bg-green-500 blur-[250px] h-48 w-96 rounded-full fixed bottom-10 right-24"
     >
     </div>
     <style is:global>
