delete 2 files and update 1 file

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-import Goto from "../components/button/goto.astro";
 import Layout from "../layouts/RootLayout.astro";
 ---
 
@@ -15,6 +14,13 @@ import Layout from "../layouts/RootLayout.astro";
       Self-taught Full Stack Developer, School-taught Mathematician
     </h2>
 
-    <Goto title="Who is Arun ?" href="/about" />
+    <h2 class="text-base sm:text-xl">
+      I'm, a self-taught full-stack developer on a mission to create impactful
+      digital solutions. Through self-guided learning and hands-on experience,
+      I've honed my skills in both front-end and back-end development.
+      Passionate about innovation and problem-solving, I thrive on challenges
+      and love turning ideas into functional code. Let's collaborate and build
+      something awesome together!
+    </h2>
   </div>
 </Layout>
