--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -8,15 +8,20 @@ const data = await getCollection("projects");
   <div
     class="flex flex-col self-start items-start justify-center p-4 mt-10 gap-6"
   >
-    <h1 class="text-6xl font-bold self-center underline mb-8">Portfolio</h1>
     <div
       class="grid grid-cols-1 place-content-center md:grid-cols-2 w-full p-4 gap-3"
     >
+      <h1
+        class="md:text-3xl col-span-1 pl-3 md:col-span-2 text-xl font-semibold dark:text-white text-black self-start md:self-center"
+      >
+        Software and Applications
+      </h1>
       {
         data.map((item: (typeof data)[0]) => (
           <a
             class="relative hover:scale-100 scale-95 ease-in-out duration-150 w-auto overflow-clip grow h-64 flex flex-col hover:bg-white/20 bg-white/10 border-white/10 rounded-md"
             href={item.data.link}
+            target="_blank"
             style={{
               backgroundImage: `url(${item.data.image})`,
               backgroundSize: "cover",
@@ -26,13 +31,15 @@ const data = await getCollection("projects");
           >
             {/* Tint using a pseudo-element */}
             <span
-              class="absolute inset-0 bg-gradient-to-b from-black to-gray-500/10 opacity-70 rounded-md"
+              class="absolute inset-0 -m-1 bg-gradient-to-b backdrop-blur-sm to-black from-gray-500/10 opacity-70 rounded-md"
               aria-hidden="true"
             />
 
-            <div class="flex px-4 py-2 grow flex-col gap-2 relative z-10">
-              <h3 class="text-3xl font-semibold">{item.data.title}</h3>
-              <h3 class="text-base mt-2 font-normal">
+            <div class="flex px-4 py-2 grow flex-col justify-end gap-2 relative z-10">
+              <h3 class="text-3xl font-semibold text-white">
+                {item.data.title}
+              </h3>
+              <h3 class="text-base mt-2 text-white font-normal">
                 {item.data.description}
               </h3>
             </div>
