--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -3,7 +3,7 @@ import Nav_Btn from "./button/nav_btn.astro";
 ---
 
 <nav
-  class="w-full fixed top-0 z-[100] border-b-[1px] border-white/30 dark:bg-black bg-white/30 dark:text-white text-black px-4 py-2 inline-flex justify-between items-center"
+  class="w-full fixed top-0 z-[100] border-b-[1px] border-black/30 dark:border-white/30 dark:bg-black bg-white/30 dark:text-white text-black px-4 py-2 inline-flex justify-between items-center"
 >
   <div
     class="inline-flex gap-5 max-w-[900px] mx-auto w-full items-center justify-between"
